# VapourSynth-dpid

./: README.md  kernel.cu  kernel8.cu
.github/workflows/: build.yaml
Source/: Makefile  Source.cpp  dpid.cpp  dpid.h  kernel16.cu  kernel8.cu  meson.build  vapoursynth-dpid.sln
Source/vapoursynth-dpid/: kernel.cu.deps  vapoursynth-dpid.vcxproj  vapoursynth-dpid.vcxproj.filters
vapoursynth-dpid/: vapoursynth-dpid.vcxproj.filters
